--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,41 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>inna</display-name>
-  <servlet>
-    <description></description>
-    <display-name>Hello</display-name>
-    <servlet-name>Hello</servlet-name>
-    <servlet-class>Hello</servlet-class>
-    <init-param>
-      <description></description>
-      <param-name>name</param-name>
-      <param-value>inna</param-value>
-    </init-param>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Hello</servlet-name>
-    <url-pattern>/hello</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>Foo</display-name>
-    <servlet-name>Foo</servlet-name>
-    <servlet-class>Foo</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Foo</servlet-name>
-    <url-pattern>/foo</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>Proba</display-name>
-    <servlet-name>Proba</servlet-name>
-    <servlet-class>Proba</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Proba</servlet-name>
-    <url-pattern>/Proba</url-pattern>
-  </servlet-mapping>
+  
+  
+    
   <servlet>
     <description></description>
     <display-name>facebook</display-name>
@@ -46,16 +14,7 @@
     <servlet-name>facebook</servlet-name>
     <url-pattern>/facebook/</url-pattern>
   </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>sess</display-name>
-    <servlet-name>sess</servlet-name>
-    <servlet-class>sess</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>sess</servlet-name>
-    <url-pattern>/sess</url-pattern>
-  </servlet-mapping>
+  
   <servlet>
     <description></description>
     <display-name>Login</display-name>
@@ -64,18 +23,9 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>Login</servlet-name>
-    <url-pattern>/Login</url-pattern>
+    <url-pattern>/Login/</url-pattern>
   </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>Proba2</display-name>
-    <servlet-name>Proba2</servlet-name>
-    <servlet-class>Proba</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Proba2</servlet-name>
-    <url-pattern>/Proba2</url-pattern>
-  </servlet-mapping>
+ 
   <servlet>
     <description></description>
     <display-name>Add_question</display-name>
@@ -96,14 +46,6 @@
     <servlet-name>Game</servlet-name>
     <url-pattern>/Game</url-pattern>
   </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>Game1</display-name>
-    <servlet-name>Game1</servlet-name>
-    <servlet-class>Game1</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Game1</servlet-name>
-    <url-pattern>/Game1</url-pattern>
-  </servlet-mapping>
+  
+
 </web-app>
