migrate to play 2.1.0 implement jokers

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="I>a=[/HSN^aijAdRT^tgVOBpk<4e`>kii4USr<q`67:iYZZAl7mk1Hu=FxXNPnbW"
+application.secret="pb53pWDGoQ^sS3eASH8Xq7/Bv=P[>PCBFsbwwKurxrBCbpZGn;^Qhf3S3yLeNrLB"
 
 # The application languages
 # ~~~~~
@@ -15,21 +15,30 @@ application.langs="en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-# global=Global
+# application.global=Global
+
+# Router 
+# ~~~~~
+# Define the Router object to use for this application.
+# This router will be looked up first when the application is starting up,
+# so make sure this is the entry point. 
+# Furthermore, it's assumed your route file is named properly. 
+# So for an application router like `conf/my.application.Router`,
+# you may need to define a router file `my.application.routes`.
+# Default to Routes in the root package (and `conf/routes`)
+# application.router=my.application.Routes
 
 # Database configuration
 # ~~~~~ 
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/facebook_game?useUnicode=true&characterEncoding=utf8&user=root&password=123"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-
-db.default.driver=com.mysql.jdbc.Driver
-#db.default.url="mysql://root:123@localhost/facebook_game"
 # db.default.driver=org.h2.Driver
-#db.default.url="jdbc:mysql://localhost:3306/facebook_game?useUnicode=true&characterEncoding=UTF-8&user=root&password=123"
-db.default.url="jdbc:mysql://localhost/facebook_game?useUnicode=true&characterEncoding=utf8&user=root&password=123"
+# db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
-# db.default.password=
+# db.default.password=""
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
@@ -44,7 +53,7 @@ db.default.url="jdbc:mysql://localhost/facebook_game?useUnicode=true&characterEn
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-ebean.default="models.*"
+ ebean.default="models.*"
 
 # Logger
 # ~~~~~
@@ -59,3 +68,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+akka.default-dispatcher.fork-join-executor.pool-size-max =64
+akka.actor.debug.receive = on
